--- a/SRteacher/Content/scss/SRv3-manager.scss
+++ b/SRteacher/Content/scss/SRv3-manager.scss
@@ -27,11 +27,14 @@
 @import "modules/SRrange-bar";
 @import "modules/SRtable";
 @import "modules/userScore";
-@import "modules/evaluate";
 @import "modules/table-recommendedBook";
 @import "modules/table-RPList";
 @import "modules/glyphicon";
 @import "modules/superBoard";
+@import "modules/fillAssessment";
+@import "modules/evaluate";
+@import "modules/upload-pic";
+@import "modules/upload-video";
 
 @import "pages/index";//done
 @import "pages/account-teacher";//done
