--- a/SRteacher/Content/scss/modules/_upload-video.scss
+++ b/SRteacher/Content/scss/modules/_upload-video.scss
@@ -18,7 +18,7 @@
 			background-repeat:no-repeat;
 			background-size:100% 100%;
 			text-align:center;
-			@extend .flex-center;
+			/*@extend .flex-center;*/
 			.upload-video__area-default__text{
 				background-color:#f9f9f9;
 				padding:10px;
