--- a/SRteacher/Content/scss/modules/_fillAssessment.scss
+++ b/SRteacher/Content/scss/modules/_fillAssessment.scss
@@ -1,127 +1,156 @@
-/*fillAssessment page template*/
-.fillAssessment-header{
-	padding-top:0px;
-	padding-bottom:30px;
-	@media screen and (min-width: 1200px) {
-	padding-left: 7.5%;	
-	padding-right: 7.5%;
-	}
-	.fillAssessment-title{ 
-		padding-top:20px;
-		padding-bottom:20px;
-		>.row{
-			@extend .flex-center;
+.fillAssessment{
+	background-color: $white;
+
+}
+
+///*fillAssessment page template*/
+.fillAssessment-header{ 
+	padding-top: 0;
+	padding-bottom: 1.5rem;
+	.fillAssessment-title{  
+		padding-top: 1rem;
+		padding-bottom: 1rem;
+		> .row{
+			align-items: center;
 		}
 		.fillAssessment-title__img{ 
-			margin-right:-15px;
+			img{
+				width: auto;
+				height: auto;
+				display: block;
+				margin: auto;
+			}
 		}
 		.fillAssessment-title__text{
 			>h1{
-				font-size:1em;
-				font-weight:400;
+				font-size: 1rem;
+				font-weight: 500;
+				margin-bottom: 0;
+				display: flex;
+    			align-items: center;
+				.userScore {
+					margin-left: map-get($spacers, 1); 
+				}
 				>small{
-					display:block;
-					font-size:0.8em;
-					font-weight:300;
-					color:$default-gray;
-					margin-top:20px;
+					display: block;
+					font-size: .8rem;
+					color: $body-color;
+					margin-top: 1rem;
 				}
 			}
 		}
 	}
-	.fillAssessment-book{
-		background-color:#f9f9f9;
-		padding:5% 6%;
-		>.row{
-			@extend .flex-center;
-		}
+	.fillAssessment-book{ 
+		background-color: $gray-100;
+		padding: 1rem;
 		.fillAssessment-book__front{
-			overflow:hidden;
-			border:1px solid #c6c6c6;
-			width:100%;
-			height:0;
-			padding-bottom:106%;
-			> img{
-				width:100%;
+			overflow: hidden;
+			border: 1px solid $gray-400;
+			width: 100%;
+			height: 0;
+			padding-bottom: calc(100%*(222/212));
+			img{
+				width: 100%;
+				height: auto;
 			}
 		}
 		.fillAssessment-book__intro{
-			>h2{
-				font-size:1em;
-				font-weight:400;
-				width:100%;
-				white-space:nowrap;
-				text-overflow:ellipsis;
-				overflow:hidden;
-				margin-top:10px;
-				margin-left:-8px;
+			margin-right: calc(var(--bs-gutter-x) * .5 * -1);
+    		margin-left: calc(var(--bs-gutter-x) * .5 * -1);
+			>h2, >h3{
+				font-size: 1rem;
+				font-weight: 500;
+				width: 100%;
+				white-space: nowrap;
+				text-overflow: ellipsis;
+				overflow: hidden;
+				margin-top: .5rem;
 			}
 			>p{
-				font-size:0.8em;
-				font-weight:300;
-				width:100%;
-				color:$default-gray;
-				white-space:nowrap;
-				text-overflow:ellipsis;
-				overflow:hidden;
-				margin-left:-8px;
+				font-size: .8rem;
+				width: 100%;
+				color: $gray-800;
+				white-space: nowrap;
+				text-overflow: ellipsis;
+				overflow: hidden;
+				margin-bottom: .25rem;
 			}
 		}
 	}
 }
 .fillAssessment-body{
-	/*.fillAssessment-section{}*/
+	
 }
 .fillAssessment-footer{
-	margin-top:50px;
-	margin-bottom:50px;
+	margin-top: 2rem;
+	margin-bottom: 2rem;
 	.fillAssessment-btns{
 	}
 }
-
-
-/*fillAssessment section template*/
+//*fillAssessment section template*/
 .fillAssessment-section{
-	margin-bottom:40px;
+	margin-bottom: 2rem;
 	.fillAssessment-section__header{
-		background-color:#f1f1f1;
-		font-size:0.9em;
-		font-weight:300;
-		color:$default-gray;
-		padding:15px 20px;
+		background-color: $gray-200;
+		font-size: .9em;
+		font-weight: 400;
+		color: $gray-800;
+		padding: .75rem;
 	}
 	.fillAssessment-section__body{
 	}
 }
 
-/*questionType */
+///*questionType 學生填寫*/
 .questionType{
+	font-size: .8rem;
+	color: $gray-800;
+	padding-left: .75rem;
+	padding-right: .75rem;
 	.questionType__stem{
-		font-size:0.8em;
-		color:$default-gray;
-		display:block;
-		margin-bottom:10px;
+		display: block;
+		margin-bottom: .5rem;
 	}
-	.questionType__area{
-		font-size:0.8em;
-		color:$default-gray;
+	textarea{
+		&[readonly]{
+			background-color: $white !important;
+			border-color: $white !important;
+			box-shadow: none !important;
+			resize: none !important;
+		}
 	}
+	input[readonly]{
+		opacity: 1.0 !important;
+		~ label{
+			opacity: 1.0 !important;	
+		}
+	}
+//	.form-check{
+//		.form-check-input[readonly]{
+//			opacity: 1.0;
+//			~ .form-check-label{
+//				opacity: 1.0;	
+//			}
+//		}
+//	}
 }
 .questionType.summary{
-	.questionType__stem{}
+	padding-left: 0;
+	padding-right: 0;
 	.questionType__area{
 		>textarea{
-			font-size:16px;
-			min-height:250px;
+			font-size: .8rem;
+			min-height: 250px;
 		}
 	}
 }
 .questionType.reflection{
-	.questionType__stem{}
+	padding-left: 0;
+	padding-right: 0;	
 	.questionType__area{
 		>textarea{
-			font-size:16px;
-			min-height:250px;
+			font-size: .8rem;
+			min-height: 250px;
 		}
 	}
 }
@@ -157,134 +186,61 @@
 		padding-left:0.8*2em;
 	}
 }
-/*teacherEvaluation */
+//*teacherEvaluation 教師批閱*/
 .teacherEvaluation{
-	.teacherEvaluation__score{
-		font-size: 0.8em;
-		color: $default-gray;
-		margin-bottom:10px;
-		height:32px;
-		line-height:32px;
-		>input{
-			text-align:center;
-			font-size:16px;
-			font-weight:400;
-			height: 32px;
-    		padding: 2px 2px;
-			&.disabled, &[disabled], &[disabled="disabled"]{
-				border-color: transparent;
-				background-color:transparent;
-				box-shadow:none;
-				color:$main-color;
-			}
+	font-size: .8rem;
+	color: $gray-800;
+	padding-left: .75rem;
+	.teacherEvaluation__score{ 
+		margin-bottom: .5rem;
+		input{
+			color: $primary;
+			text-align: center;
 		}
 	}
 	.teacherEvaluation__comments{ 
-		font-size:0.8em;
-		color:$default-gray;
-		position:relative;
-		/*padding-left:0.8em*2;*/
+		display: flex;
 		.teacherEvaluation__comments-title{ 
-			position:absolute;
-			top:2px;
-			/*left:0.8em*2;*/
+			white-space: nowrap;
 		}
-		>textarea{
-			resize:none; 
-			/*margin-left:calc(3em + 5px);*/
-			font-size:16px;
+		textarea{
+			flex: 1;
+			font-size:.8rem;
+			resize: none; 
 			padding: .375rem;
 			color: $primary; 
-			&.disabled, &[disabled], &[disabled="disabled"]{
-				border-color: transparent;
-				background-color: transparent;
-				box-shadow:none;
-				color:$main-color;
-			}
+			margin-left: calc(.25em + 1px);
+			min-height: calc(250px - (0.8rem*1.5 + .25rem*2 + 2px) - .5rem);
+		}
+	}
+	input{
+		&[readonly]{
+			background-color: $white;
+			border-color: $white;
+			box-shadow: none;
+		}
+	}
+	textarea{
+		&[readonly]{
+			background-color: $white;
+			border-color: $white;
+			box-shadow: none;
+			resize: none;
 		}
 	}
 }
-.teacherEvaluation.summary{
-	.teacherEvaluation__score{
-	}
+.teacherEvaluation.choice,
+.teacherEvaluation.QandA,
+.teacherEvaluation.picture,
+.teacherEvaluation.video{
 	.teacherEvaluation__comments{
-		padding-left:0.8em*2;
-		.teacherEvaluation__comments-title{ 
-			left:0;
-		}
-		textarea{
-			margin-left:0.8em*2;
-			min-height:210px;
-		}
-	}
-}
-.teacherEvaluation.reflection{
-	.teacherEvaluation__score{
-	}
-	.teacherEvaluation__comments{
-		padding-left:0.8em*2;
-		.teacherEvaluation__comments-title{ 
-			left:0;
-		}
-		textarea{
-			margin-left:0.8em*2;
-			min-height:210px;
-		}
+		text-indent: 1.35rem;
 	}
 }
 .teacherEvaluation.choice{
-	.teacherEvaluation__score{
-	}
 	.teacherEvaluation__comments{
-		padding-left:0.8em*2;
-		.teacherEvaluation__comments-title{ 
-			left:0.8em*2;
-		}
 		textarea{
-			margin-left:calc(3em + 5px);
 			min-height:100px;
-		}
-	}
-}
-.teacherEvaluation.QandA{
-	.teacherEvaluation__score{
-	}
-	.teacherEvaluation__comments{
-		padding-left:0.8em*2;
-		.teacherEvaluation__comments-title{ 
-			left:0.8em*2;
-		}
-		textarea{
-			margin-left:calc(3em + 5px);
-			min-height:210px;
-		}
-	}
-}
-.teacherEvaluation.picture{
-	.teacherEvaluation__score{
-	}
-	.teacherEvaluation__comments{
-		padding-left:0.8em*2;
-		.teacherEvaluation__comments-title{ 
-			left:0.8em*2;
-		}
-		textarea{
-			margin-left:calc(3em + 5px);
-			min-height:300px;
-		}
-	}
-}
-.teacherEvaluation.video{
-	.teacherEvaluation__score{
-	}
-	.teacherEvaluation__comments{
-		padding-left:0.8em*2;
-		.teacherEvaluation__comments-title{ 
-			left:0.8em*2;
-		}
-		textarea{
-			margin-left:calc(3em + 5px);
-			min-height:300px;
 		}
 	}
 }
