--- a/SRteacher/Content/scss/modules/_upload-pic.scss
+++ b/SRteacher/Content/scss/modules/_upload-pic.scss
@@ -18,7 +18,7 @@
 			background-repeat:no-repeat;
 			background-size:100% 100%;
 			text-align:center;
-			@extend .flex-center;
+			/*@extend .flex-center;*/
 			.upload-pic__area-default__text{
 				background-color:#f9f9f9;
 				padding:10px;
@@ -34,7 +34,7 @@
 			right:0;
 			bottom:0;
 			background-color:#FFF;
-			@extend .flex-center;
+			/*@extend .flex-center;*/
 			>img{
 				max-height:100%;
 			}
