--- a/SRteacher/Content/scss/modules/_upload-video.scss
+++ b/SRteacher/Content/scss/modules/_upload-video.scss
@@ -1,58 +1,54 @@
 .upload-video{
-	width:100%;//
-	height: 100%;//
+	width: 100%; 
+	height: 100%; 
 	.upload-video__area{
-		position:relative;
-		width:100%;
-		height:280px;
-		overflow:hidden;
-		border:1px solid #c6c6c6;
-		font-size:0.8em;
-		color:#8a9294;
+		position: relative;
+		width: 100%;
+		height: calc( (250px - (0.8rem*1.5 + .25rem*2 + 2px) - .5rem) - ( .8rem*1.2 + .125rem*2 + 1px*2) ); //250px - 分數input - <p>
+		overflow: hidden;
+		border: 1px solid $gray-400;
+		font-size: .8rem;
+		color: $gray-800;
 		.upload-video__area-default{
-			position:relative;
-			width:100%;
-			height:100%;
-			background-color:#f9f9f9;
-			background-image:url(../images/myStudy/default-block-img.png);
-			background-repeat:no-repeat;
-			background-size:100% 100%;
-			text-align:center;
-			/*@extend .flex-center;*/
+			position: relative;
+			width: 100%;
+			height: 100%;
+			background-color: $gray-100;
+			background-image: url(../images/myStudy/default-block-img.png);
+			background-repeat: no-repeat;
+			background-size: 100% 100%;
+			text-align: center;
+			display: flex;
+			justify-content: center;
+			align-items: center;
 			.upload-video__area-default__text{
-				background-color:#f9f9f9;
-				padding:10px;
-				>img{ margin-top:10px; margin-bottom:10px;}
+				background-color: $gray-100;
+				padding: .5rem;
+				img{ 
+					display: block;
+					width: auto;
+					height: auto;
+					margin: auto;
+				}
 			}
 		}
 		.upload-video__area-answer{
-			position:absolute;
-			width:100%;
-			height:100%;
-			top:0;
-			left:0;
-			right:0;
-			bottom:0;
-			background-color:#000;
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			background-color: #000;
 			.upload-video__area-answer__videoWidth{
-				max-width:500px;
+				max-width: 100%;
 				height: 100%;
-				margin:0 auto;
+				margin: 0 auto;
 				> *{
 					width: 100%;
 					height: 100%;
 				}
-			}
-			.ratio {
-				position: relative;
-				width: 0;
-    			height: 100%;
-			}
-			.ratio-4x3{
-				padding-left: calc((3/4) * 100% );
-			}
-			.ratio-16x9{
-				padding-left: calc((9/16) * 100% );
 			}
 		}
 	}
