--- a/SRteacher/Content/scss/modules/_fillAssessment.scss
+++ b/SRteacher/Content/scss/modules/_fillAssessment.scss
@@ -107,12 +107,12 @@
 	color: $gray-800;
 	padding-left: .75rem;
 	padding-right: .75rem;
-	.questionType__stem{ background-color: rgba(255,0,4, .1);
+	.questionType__stem{ 
 		padding-top: calc(.25rem + 1px);
 		padding-bottom: calc(.25rem + 1px);
 		margin-bottom: .5rem;
 	}
-	.questionType__area{background-color: rgba(255,125,4, .1);
+	.questionType__area{
 		
 	}
 	textarea{
@@ -191,14 +191,14 @@
 	font-size: .8rem;
 	color: $gray-800;
 	padding-left: .75rem;
-	.teacherEvaluation__score{ background-color: rgba(255,0,4, .1);
+	.teacherEvaluation__score{ 
 		margin-bottom: .5rem;
 		input{
 			color: $primary;
 			text-align: center;
 		}
 	}
-	.teacherEvaluation__comments{ background-color: rgba(255,125,4, .1);
+	.teacherEvaluation__comments{ 
 		display: flex;
 		.teacherEvaluation__comments-title{ 
 			white-space: nowrap;
