--- a/SRteacher/Content/scss/modules/_audioRecord.scss
+++ b/SRteacher/Content/scss/modules/_audioRecord.scss
@@ -58,7 +58,7 @@
 			right:0;
 			background-image:url(../images/myStudy/audioProgress/cover.png);
 			background-repeat:no-repeat;
-			background-position:ccenter center;
+			background-position: center center;
 			background-size:100% 100%;
 			color:#43a047;
 			font-size:30px;
