--- a/SRteacher/Content/scss/SRv3-manager.scss
+++ b/SRteacher/Content/scss/SRv3-manager.scss
@@ -53,6 +53,7 @@
 
 @import "pages/RP-bookList";//done
 @import "pages/RP-quiz";//done
-@import "pages/RP-manage";//ing
+@import "pages/RP-manage";//done
+@import "pages/RP-skill";//ing
 //@import "pages/RP-courseActivity";
 
