--- a/SRteacher/Content/css/SRv3-manager.css
+++ b/SRteacher/Content/css/SRv3-manager.css
@@ -255,6 +255,11 @@ option[value=""]{ color: $secondary;
 
 .modal-approxfull .table-responsive .table { min-width: 720px; }
 
+.btn-float-download { font-size: .8rem; color: #43a047; background-color: transparent; border: none; text-align: center; z-index: 1000; text-decoration: none; position: sticky; top: 100%; left: 100%; transform: translate(-0.75rem, -125%); opacity: .65; }
+.btn-float-download .btn-float-img { display: block; width: 2.2rem; height: 2.2rem; border-radius: 100%; background-color: #43a047; background-image: url("../images/icon-download.png"); background-position: center center; background-repeat: no-repeat; background-size: 65%; margin: auto; }
+.btn-float-download:hover { color: shade(#43a047, 15%); text-decoration: none; opacity: 1; }
+.btn-float-download:hover .float-download__img { background-color: shade(#43a047, 15%); }
+
 [class*="DACCicon-"] { font-size: 0.8em; text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1); display: inline-flex; justify-content: center; align-items: center; width: 1rem; height: 1rem; border-radius: 100%; color: #FFF; vertical-align: middle; margin-top: -.2em; margin-right: 2px; }
 
 .DACCicon-all { background-color: #508eff; }
