--- a/SRteacher/Content/scss/mend/_ui.scss
+++ b/SRteacher/Content/scss/mend/_ui.scss
@@ -38,3 +38,40 @@
 		}
 	}		
 }
+
+.btn-float-download{
+    font-size: .8rem;
+    color: $primary; 
+    background-color: transparent;
+    border: none;
+    text-align: center;
+    z-index: 1000;
+    text-decoration: none;
+	position: sticky; 
+	top: 100%;
+	left: 100%;
+	transform: translate(-.75rem, -125%);
+    opacity: .65;
+
+    .btn-float-img{
+        display: block;
+        width: 2.2rem;
+        height: 2.2rem;
+		border-radius: 100%; 
+        background-color: $primary;
+		background-image: url("../images/icon-download.png");
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: 65%;
+		margin: auto;
+    }
+    
+    &:hover{
+        color: shade($primary, $btn-hover-bg-shade-amount); 
+        text-decoration: none;
+        opacity: 1;  
+        .float-download__img{
+            background-color: shade($primary, $btn-hover-bg-shade-amount);     
+        }
+    }
+}
