--- a/SRteacher/Content/scss/mend/_ui.scss
+++ b/SRteacher/Content/scss/mend/_ui.scss
@@ -50,7 +50,7 @@
 	position: sticky; 
 	top: 100%;
 	left: 100%;
-	transform: translate(-.75rem, -125%);
+	transform: translateY(-125%);
     opacity: .65;
 
     .btn-float-img{
