--- a/SRteacher/Content/css/SRv3-manager.css
+++ b/SRteacher/Content/css/SRv3-manager.css
@@ -255,7 +255,7 @@ option[value=""]{ color: $secondary;
 
 .modal-approxfull .table-responsive .table { min-width: 720px; }
 
-.btn-float-download { font-size: .8rem; color: #43a047; background-color: transparent; border: none; text-align: center; z-index: 1000; text-decoration: none; position: sticky; top: 25%; left: 100%; opacity: .65; }
+.btn-float-download { font-size: .8rem; color: #43a047; background-color: transparent; border: none; text-align: center; z-index: 1000; text-decoration: none; position: fixed; top: 25%; left: 100%; opacity: .65; }
 .btn-float-download .btn-float-img { display: block; width: 2.2rem; height: 2.2rem; border-radius: 100%; background-color: #43a047; background-image: url("../images/icon-download.png"); background-position: center center; background-repeat: no-repeat; background-size: 65%; margin: auto; }
 .btn-float-download:hover { color: shade(#43a047, 15%); text-decoration: none; opacity: 1; }
 .btn-float-download:hover .float-download__img { background-color: shade(#43a047, 15%); }
