--- a/SRteacher/Content/scss/mend/_ui.scss
+++ b/SRteacher/Content/scss/mend/_ui.scss
@@ -47,7 +47,7 @@
     text-align: center;
     z-index: 1000;
     text-decoration: none;
-	position: sticky; 
+	position: fixed; 
 	top: 25%;
 	left: 100%;
     opacity: .65;
